--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="facebook_app_id">451476856612235</string>
     <string name="fb_login_protocol_scheme">fb451476856612235</string>
-    <string name="app_name">Papper App</string>
+    <string name="app_name">Paper</string>
 </resources>
